# doc-mind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  rag_evaluations.jsonl
.chroma/: chroma.sqlite3
app/: main.py
app/core/: __init__.py  config.py  logging.py
app/database/: __init__.py  base.py  bm25_store.py  chroma.py
app/llm/: __init__.py  base.py  embedding_model.py  google_model.py
app/rag/: __init__.py  evaluator.py  graph.py  nodes.py  prompts.py  state.py  tools.py
app/routes/: __init__.py  common.py  ingest.py  query.py  ui.py
app/templates/: ui.html
app/utils/: chunker.py  document_processor.py  docx_processor.py  pdf_processor.py
