[project]
name = "doc-mind"
version = "0.1.0"
description = "Intelligent Document QA — RAG-powered API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "google-cloud-aiplatform>=1.145.0",
    "google-genai>=1.70.0",
    "fastembed>=0.7.3",
    "chromadb>=0.6",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "langchain-community>=0.3",
    "langgraph>=0.4",
    "ragas>=0.2",
    "langchain-core>=0.3",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
